--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </ul>
 </div>
   <div data-role="footer" data-position="fixed">
-          <h4>Pie</h4>     
+          <h4>TecnoQuestions</h4>     
         </div>     
 </div>
 
@@ -79,7 +79,7 @@ web y móviles, con almacenamiento persistente de datos,
                </div>  
                  </div>
                  <div data-role="footer" data-position="fixed">
-          <h4>Pie</h4>     
+          <h4>TecnoQuestions</h4>     
         </div>   
 </div>                 
 
@@ -197,13 +197,13 @@ web y móviles, con almacenamiento persistente de datos,
 </ul>
 </div>
 </div>
-</div>
+
         </div>    
         <div data-role="footer" data-position="fixed">
           <h4>TecnoQuestions</h4>     
         </div>     
       </div>
       
-      
+   </div>   
  </body>
 </html> 
