--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ web y móviles, con almacenamiento persistente de datos,
 </div>            
        <div data-role="footer" align="center" data-theme="a">     
       <div>      
-        <img src="imagenes/persona_azul.png" width="46" height="46">    
+        <img src="imagenes/image.png" width="67" height="56">    
                  </div>
            <div>      
                 <h4>Rosa María Hidalgo López / Mario Segundo Rendón</h4> 
